tests/snapshots/eval__functions__anonymous_arity_error_says_function.snap
---
source: tests/eval.rs
expression: "run(\"print((fn(x) { x })())\")"
---
Err(
    EvalError {
        category: Type,
        message: "`function` takes 1 argument, got 0",
        span: Span {
            start: 6,
            end: 19,
        },
        cause: None,
    },
)
