tests/snapshots/eval__functions__anonymous_fn_call.snap
---
source: tests/eval.rs
expression: "run(\"const double = fn(x) { x * 2 }\\nprint(double(21))\")"
---
Ok(
    "42\n",
)
