tests/snapshots/eval__functions__calling_int_is_type_error.snap
---
source: tests/eval.rs
expression: "run(\"print((42)(1))\")"
---
Err(
    EvalError {
        category: Type,
        message: "cannot call value of type Int",
        span: Span {
            start: 6,
            end: 13,
        },
        cause: None,
    },
)
