tests/snapshots/eval__functions__calling_string_is_type_error.snap
---
source: tests/eval.rs
expression: "run(r#\"print(\"hi\"(1))\"#)"
---
Err(
    EvalError {
        category: Type,
        message: "cannot call value of type String",
        span: Span {
            start: 6,
            end: 13,
        },
        cause: None,
    },
)
