tests/snapshots/eval__functions__capture_is_snapshot_not_live.snap
---
source: tests/eval.rs
expression: "run(\"var m = 3\\nconst f = fn(x) { x * m }\\nm = 99\\nprint(f(2))\")"
---
Ok(
    "6\n",
)
