tests/snapshots/eval__functions__captures_const_by_value.snap
---
source: tests/eval.rs
expression: "run(\"const m = 3\\nfn triple(x) { x * m }\\nprint(triple(7))\")"
---
Ok(
    "21\n",
)
