tests/snapshots/eval__functions__explicit_return.snap
---
source: tests/eval.rs
expression: "run(\"fn f() { return 7 }\\nprint(f())\")"
---
Ok(
    "7\n",
)
